# SMArtInt

./: .gitignore  .gitmodules  DymolaStartup.mos  LICENSE  README.md  compile.bat  deploy.sh
CSource/: CMakeLists.txt
CSource/SMArtInt/: InputManagementONNX.cpp  InputManagementTF.cpp  InterfaceFunctions.cpp  InterfaceFunctions.h  NeuralNet.cpp  NeuralNet.h  NeuralNetONNX.cpp  NeuralNetONNX.h  NeuralNetTF.cpp  NeuralNetTF.h  TensorflowDllHandlerWin.h  Utils.cpp
SMArtInt/: libraryinfo.mos  package.mo
SMArtInt/BaseClasses/: BaseFeedForwardNeuralNet.mo  BaseGenericNeuralNet.mo  BaseNeuralNet.mo  BaseRecurrentNeuralNet.mo  BaseStatefulRecurrentNeuralNet.mo  package.mo
SMArtInt/Blocks/: EvaluateGenericNeuralNetwork.mo  EvaluateRecurrentNeuralNet.mo  EvaluateSimpleFeedForwardNeuralNetwork.mo  EvaluateStatefulRecurrentNeuralNet.mo  package.mo
SMArtInt/Internal/: ModelicaUtilityHelper.mo  SMArtIntClass.mo  package.mo  package.order
SMArtInt/Internal/ClaRaDelay/: ExternalTable.mo  ExternalTables.mo  getDelayValuesAtTime.mo  getDelayValuesAtTimeArray.mo  package.mo
SMArtInt/Internal/InterfaceFunctions/: initializeStates.mo  package.mo  runInferenceFlatTensor.mo
SMArtInt/Internal/Utilities/: RunInferenceFlatInput.mo  RunInferenceFlatInputStatefulRNN.mo  RunInterferenceRNN.mo  package.mo
SMArtInt/Internal/Utilities/SubModels/: Array2DDeflatteningModel.mo  Array2DFlatteningModel.mo  RNNDeflattenOutput.mo  RNNFlattenInput.mo  RNNFlatteningMethod.mo  package.mo
SMArtInt/Internal/Utilities/SubModels/Tests/: Test_FlatInputHistory.mo  package.mo
SMArtInt/Resources/ConversionScripts/: Conversion_0.1.1_to_0.2.0.mos
SMArtInt/Resources/ExampleNeuralNets/: requirements.txt
SMArtInt/Resources/ExampleNeuralNets/TFAgentsCartPole/: cart_pole_DQN.tflite
SMArtInt/Resources/Include/: ModelicaUtilityInterface.cpp
SMArtInt/Resources/Scripts/: ConvertFrom051_to_052.mos
SMArtInt/Tester/: package.mo  package.order
SMArtInt/Tester/ExamplePI/: package.mo  package.order
SMArtInt/Tester/ExamplePI/ONNX/: DoubleRoom_RNNState_onnx.mo  DoubleRoom_RNN_onnx.mo  StepTest_RNN_onnx.mo  StepTest_Stateful_onnx.mo  TF_PI_RNN_onnx.mo  TF_PI_Stateful_onnx.mo  package.mo  package.order
SMArtInt/Tester/ExamplePI/ReferenceModels/: DiscretePID.mo  DoubleRoom_ContinuousPI.mo  DoubleRoom_Discrete.mo  package.mo
SMArtInt/Tester/ExamplePI/TFLite/: DoubleRoom_RNNState_tflite.mo  DoubleRoom_RNN_tflite.mo  StepTest_RNN_tflite.mo  StepTest_Stateful_tflite.mo  TF_PI_RNN_tflite.mo  TF_PI_Stateful_tflite.mo  package.mo  package.order
SMArtInt/Tester/ExampleTFAgentsRL/: CartPoleDQNTest.mo  package.mo  package.order
SMArtInt/Tester/ExampleTFAgentsRL/SubModels/: CartPole.mo  DiscreteIndexToForce.mo  SignalNormalization.mo  package.mo  package.order
SMArtInt/Tester/PipeHeatTransferExample/: package.mo
SMArtInt/Tester/PipeHeatTransferExample/ONNX/: NNHeatTransfer_onnx.mo  PipeLocalHeatTransfer_onnx.mo  TestModelEvaluation_onnx.mo  TestPipe_onnx.mo  package.mo  package.order
SMArtInt/Tester/PipeHeatTransferExample/ReferenceModels/: TestModelEvaluation_Ref.mo  TestPipeRef.mo  package.mo  package.order
SMArtInt/Tester/PipeHeatTransferExample/TFLite/: NNHeatTransfer_tflite.mo  PipeLocalHeatTransfer_smallNN.mo  PipeLocalHeatTransfer_tflite.mo  TestModelEvaluation_tflite.mo  TestPipe_tflite.mo  package.mo  package.order
SMArtInt/UsersGuide/: Overview.mo  package.mo  package.order
SMArtInt/UsersGuide/Contact/: package.mo
SMArtInt/UsersGuide/LicenseConditions/: package.mo
